@@ -10,11 +10,11 @@
 
 .bail.out.1 <- function(fun, cl) {
     stop(gettextf('not-yet-implemented method for %s(<%s>)', fun, cl),
-         call. = FALSE)
+	 call. = FALSE)
 }
 .bail.out.2 <- function(fun, cl1, cl2) {
     stop(gettextf('not-yet-implemented method for %s(<%s>, <%s>)',
-                  fun, cl1, cl2), call. = FALSE)
+		  fun, cl1, cl2), call. = FALSE)
 }
 
 ## chol() via "dpoMatrix"
@@ -91,13 +91,13 @@ isPacked <- function(x)
 emptyColnames <- function(x)
 {
     ## Useful for compact printing of (parts) of sparse matrices
-    ## possibly  dimnames(x) "==" NULL :
+    ## possibly	 dimnames(x) "==" NULL :
     dimnames(x) <- list(dimnames(x)[[1]], rep("", dim(x)[2]))
     x
 }
 
 prTriang <- function(x, digits = getOption("digits"),
-                     justify = "none", right = TRUE)
+		     justify = "none", right = TRUE)
 {
     ## modeled along stats:::print.dist
     diag <- TRUE
@@ -106,9 +106,9 @@ prTriang <- function(x, digits = getOption("digits"),
     m <- as(x, "matrix")
     cf <- format(m, digits = digits, justify = justify)
     if(upper)
-        cf[row(cf) > col(cf)] <- "."
+	cf[row(cf) > col(cf)] <- "."
     else
-        cf[row(cf) < col(cf)] <- "."
+	cf[row(cf) < col(cf)] <- "."
     print(cf, quote = FALSE, right = right)
     invisible(x)
 }
@@ -119,13 +119,13 @@ prMatrix <- function(x, digits = getOption("digits")) {
     cat(sprintf('%d x %d Matrix of class "%s"\n', d[1], d[2], cl))
     maxp <- getOption("max.print")
     if(prod(d) <= maxp) {
-        if(is(x, "triangularMatrix"))
-            prTriang(x, digits = digits)
-        else
-            print(as(x, "matrix"), digits = digits)
+	if(is(x, "triangularMatrix"))
+	    prTriang(x, digits = digits)
+	else
+	    print(as(x, "matrix"), digits = digits)
     }
     else { ## d[1] > maxp / d[2] >= nr :
-        m <- as(x, "matrix")
+	m <- as(x, "matrix")
 	nr <- maxp %/% d[2]
 	n2 <- ceiling(nr / 2)
 	print(head(m, max(1, n2)))
@@ -159,7 +159,7 @@ decodeInd <- function(code, nr) cbind(code %% nr, code %/% nr)
 complementInd <- function(ij, dim)
 {
     ## Purpose: Compute the complement of the 2-column 0-based ij-matrix
-    ##          but as 1-based indices
+    ##		but as 1-based indices
     n <- prod(dim)
     if(n == 0) return(integer(0))
     ii <- 1:n
@@ -187,14 +187,14 @@ WhichintersectInd <- function(ij1, ij2, nrow) {
 ### There is a test on this in ../tests/dgTMatrix.R !
 uniq <- function(x) {
     if(is(x, "TsparseMatrix")) {
-        ## Purpose: produce a *unique* triplet representation:
-        ##		by having (i,j) sorted and unique
-        ## -----------------------------------------------------------
-        ## The following is not quite efficient {but easy to program,
-        ## and both as() are based on C code
-        if(is(x, "dgTMatrix")) as(as(x, "dgCMatrix"), "dgTMatrix")
-        else if(is(x, "lgTMatrix")) as(as(x, "lgCMatrix"), "lgTMatrix")
-        else stop("not implemented for class", class(x))
+	## Purpose: produce a *unique* triplet representation:
+	##		by having (i,j) sorted and unique
+	## -----------------------------------------------------------
+	## The following is not quite efficient {but easy to program,
+	## and both as() are based on C code
+	if(is(x, "dgTMatrix")) as(as(x, "dgCMatrix"), "dgTMatrix")
+	else if(is(x, "lgTMatrix")) as(as(x, "lgCMatrix"), "lgTMatrix")
+	else stop("not implemented for class", class(x))
 
     } else x  ## not 'gT' ; i.e. "uniquely" represented in any case
 }
@@ -210,9 +210,9 @@ uniq_gT <- function(x)
     if((n <- length(x@i)) == 0) return(x)
     ii <- order(x@i, x@j)
     if(any(ii != 1:n)) {
-        x@i <- x@i[ii]
-        x@j <- x@j[ii]
-        x@x <- x@x[ii]
+	x@i <- x@i[ii]
+	x@j <- x@j[ii]
+	x@x <- x@x[ii]
     }
     ij <- x@i + nrow(x) * x@j
     if(any(dup <- duplicated(ij))) {
@@ -242,10 +242,10 @@ t_trMatrix <- function(x) {
 
 fixupDense <- function(m, from) {
     if(is(m, "triangularMatrix")) {
-        m@uplo <- from@uplo
-        m@diag <- from@diag
+	m@uplo <- from@uplo
+	m@diag <- from@diag
     } else if(is(m, "symmetricMatrix")) {
-        m@uplo <- from@uplo
+	m@uplo <- from@uplo
     }
     m
 }
@@ -254,9 +254,9 @@ fixupDense <- function(m, from) {
 l2d_Matrix <- function(from) {
     stopifnot(is(from, "lMatrix"))
     fixupDense(new(sub("^l", "d", class(from)),
-                   x = as.double(from@x),
-                   Dim = from@Dim, Dimnames = from@Dimnames),
-               from)
+		   x = as.double(from@x),
+		   Dim = from@Dim, Dimnames = from@Dimnames),
+	       from)
     ## FIXME: treat 'factors' smartly {not for triangular!}
 }
 
@@ -285,19 +285,19 @@ geClass <- function(x) {
 d2l_Matrix <- function(from) {
     stopifnot(is(from, "dMatrix"))
     fixupDense(new(sub("^d", "l", class(from)), # no need for dClass2 here
-                   Dim = from@Dim, Dimnames = from@Dimnames),
-               from)
+		   Dim = from@Dim, Dimnames = from@Dimnames),
+	       from)
     ## FIXME: treat 'factors' smartly {not for triangular!}
 }
 
 
 try_as <- function(x, classes, tryAnyway = FALSE) {
     if(!tryAnyway && !is(x, "Matrix"))
-        return(x)
+	return(x)
     ## else
     ok <- canCoerce(x, classes[1])
     while(!ok && length(classes <- classes[-1])) {
-        ok <- canCoerce(x, classes[1])
+	ok <- canCoerce(x, classes[1])
     }
     if(ok) as(x, classes[1]) else x
 }
@@ -315,7 +315,8 @@ canCoerce <- function(object, Class) {
 			 useInherited = c(from = TRUE, to = FALSE)))
 }
 
-.is.triangular <- function(object, upper = NA) {
+## For *dense* matrices
+isTriMat <- function(object, upper = NA) {
     ## pretest: is it square?
     d <- dim(object)
     if(d[1] != d[2]) return(FALSE)
@@ -334,6 +335,38 @@ canCoerce <- function(object, Class) {
     else ## upper is FALSE
 	all(object[upper.tri(object)] == 0)
 }
+
+## For Csparse matrices
+isTriC <- function(x, upper = NA) {
+    ## pretest: is it square?
+    d <- dim(x)
+    if(d[1] != d[2]) return(FALSE)
+    ## else
+    if(d[1] == 0) return(TRUE)
+    ni <- 1:d[1]
+    ## the row indices split according to column:
+    ilist <- split(x@i, factor(rep.int(ni, diff(x@p)), levels= ni))
+    lil <- unlist(lapply(ilist, length), use.names = FALSE)
+    if(any(lil == 0)) {
+	pos <- lil > 0
+	if(!any(pos)) ## matrix of all 0's
+	    return(TRUE)
+	ilist <- ilist[pos]
+	ni <- ni[pos]
+    }
+    if(is.na(upper)) {
+	if(all(sapply(ilist, max, USE.NAMES = FALSE) <= ni))
+	    structure(TRUE, kind = "U")
+	else if(all(sapply(ilist, min, USE.NAMES = FALSE) >= ni))
+	    structure(TRUE, kind = "L")
+	else FALSE
+    } else if(upper) {
+	all(sapply(ilist, max, USE.NAMES = FALSE) <= ni)
+    } else { ## 'lower'
+	all(sapply(ilist, min, USE.NAMES = FALSE) >= ni)
+    }
+}
+
 
 .is.diagonal <- function(object) {
     d <- dim(object)
